--- a/posts/my-first-post.mdx
+++ b/posts/my-first-post.mdx
@@ -1,10 +1,12 @@
 ---
 title: 我的第一篇博客
-description: "来试一下"
-date: Feb 27 2023
+description: "试试"
+date: Feb 28 2023
 ---
 # 我的第一篇博客
-我来试一下有些什么东西  
-应该可以**加粗**吧
-* _不知道_有什么~效果~
-* 有点期待呢
+## 今日做事
+* 测试GetPower程序，可惜没成功实践。
+* 完善博客项目。
+* 上课写作业。
+* 那头猪又咬我。
+808天
